@@ -45,7 +45,7 @@
             "Carp" : "0",
             "Digest::SHA" : "0",
             "Exporter" : "0",
-            "Log::Any" : "1.03",
+            "Log::Any" : "1.033",
             "Module::Find" : "0.11",
             "Module::Runtime" : "0.014",
             "Moo" : "2.000000",
@@ -65,6 +65,7 @@
       },
       "test" : {
          "requires" : {
+            "Log::Any::Test" : "1.033",
             "Test2::V0" : "0.000094",
             "Test::Starch" : "0.12"
          }
