@@ -1,26 +1,28 @@
 requires 'perl' => '5.008001';
 requires 'strictures' => '2.000000';
 requires 'namespace::clean' => '0.24';
+
+requires 'Log::Any' => '1.033';
+requires 'Module::Find' => '0.11';
+requires 'Module::Runtime' => '0.014';
 requires 'Moo' => '2.000000';
+requires 'Moo::Object';
 requires 'Moo::Role' => '2.000000';
-requires 'Moo::Object'; # Does not have a version.
-requires 'Types::Standard' => '1.000005';
+requires 'MooX::BuildArgs' => '0.02';
+requires 'Try::Tiny' => '0.18';
 requires 'Types::Common::Numeric' => '1.000005';
 requires 'Types::Common::String' => '1.000005';
-requires 'Module::Runtime' => '0.014';
-requires 'Module::Find' => '0.11';
-requires 'Log::Any' => '1.03';
-requires 'Try::Tiny' => '0.18';
-requires 'MooX::BuildArgs' => '0.02';
+requires 'Types::Standard' => '1.000005';
 
-requires 'Exporter';
 requires 'Carp';
+requires 'Digest::SHA';
+requires 'Exporter';
 requires 'Scalar::Util';
 requires 'Storable';
-requires 'Digest::SHA';
 
 on test => sub {
     requires 'Test2::V0' => '0.000094';
     requires 'Test::Starch' => '0.12';
+    requires 'Log::Any::Test' => '1.033';
 };
 
