@@ -43,7 +43,7 @@ foreach my $method (qw( set get remove )) {
         qr{$uc_method FAIL},
         "$method exception logged",
     );
-    log_empty_ok();
+    $log->empty_ok();
 
     like(
         dies { $die_store->$method( 1234, [] ) },
@@ -54,13 +54,3 @@ foreach my $method (qw( set get remove )) {
 }
 
 done_testing;
-
-# Workaround: https://github.com/dagolden/Log-Any/issues/30
-sub log_empty_ok {
-    my ($test_msg) = @_;
-    $test_msg = 'log is empty' if !defined $test_msg;
-    my $msgs = $log->msgs();
-    ok( (@$msgs == 0), $test_msg );
-    use Data::Dumper;
-    diag( Dumper($msgs) ) if @$msgs;
-}
