@@ -2,6 +2,8 @@ Revision history for Perl extension Starch.
 
 {{$NEXT}}
 
+ - Up Log::Any version to include a fix that we no longer need to workaround.
+
 0.12 2019-03-01T06:09:40Z
 
  - Remove Test::Starch and add it as a dependency.
